manifests/80_service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: rebase-operator
  name: rebase-operator
spec:
  selector:
    app: rebase-operator
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
