manifests/90_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: rebase-operator
  name: rebase-operator
spec:
  host: rebase-operator.svc.ci.openshift.org
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    namespace: rebase-operator
    name: rebase-operator
    weight: 100
  wildcardPolicy: None
